update the readme to reflect my goals