@@ -1,84 +1,13 @@
-Shopizer 2.2.0 (for java 1.8 +)
--------------------
+Unshop 
+------
+Our mission is to provide a simple ecommerce backend with an intutive admin ui and a rest api for developers to build upon.
+Our target users a small local businesses who need an online presence to stay relevent.
 
-Java open source e-commerce software
-
+### Open source e-commerce backend
+- Admin UI
+- REST API
 - Shopping cart
 - Catalogue
 - Search
 - Checkout
-- Administration
-- REST API
-
-See the demo:
--------------------
-http://demo.shopizer.com:8080
-
-
-To get the code:
--------------------
-Clone the repository:
-$ git clone git://github.com/shopizer-ecommerce/shopizer.git
-
-If this is your first time using Github, review http://help.github.com to learn the basics.
-
-You can also download the zip file containing the code from https://github.com/shopizer-ecommerce/shopizer 
-
-To build the application:
--------------------	
-From the command line with Maven installed:
-
-	$ cd shopizer
-	$ mvn clean install
-	
-
-Run the application from Tomcat 
--------------------
-copy sm-shop/target/ROOT.war to tomcat or any other application server deployment dir
-
-Increase heap space to 1024 m or at least 512 m
-
-### Heap space configuration in Tomcat:
-
-
-If you are using Tomcat, edit catalina.bat for windows users or catalina.sh for linux / Mac users
-
-	in Windows
-	set JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=256m" 
-	
-	in Linux / Mac
-	export JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=256m" 
-
-Run the application from Spring boot 
--------------------
-
-       $ cd sm-shop
-       $ mvn spring-boot:run
-
-Run the application from Spring boot in eclipse
--------------------
-
-Right click on com.salesmanager.shop.application.ShopApplication
-
-run as Java Application
-
-### Access the application:
--------------------
-
-Access the deployed web application at: http://localhost:8080/
-
-Acces the admin section at: http://localhost:8080/admin
-
-#####username : admin
-#####password : password
-
-The instructions above will let you run the application with default settings and configurations.
-Please read the instructions on how to connect to MySQL, configure an email server and configure other subsystems
-
-
-### Documentation:
--------------------
-
-Documentation available from the wiki <http://shopizer-ecommerce.github.io/shopizer/#>
-
-More information is available on shopizer web site here <http://www.shopizer.com>
+- Payment
